# ufunclab

./: .gitignore  LICENSE.txt  README.md  README_build.md  meson.build  pyproject.toml  setup.py
.github/workflows/: test-with-numpy-main.yml  tests.yml  try-windows-2025-vs2026.yaml  wheels.yml  wheels.yml.hold
_build_utils/: make_version_file.py
examples/: backlash_demo.py  backlash_sum_demo.py  deadzone_demo.py  deadzone_demo1.py  deadzone_demo2.py  debye1_demo.py  erfcx_plot.py  exponential_ramp_demo.py  fillnan1d_demo.py  hyperbolic_ramp_demo.py  hysteresis_relay_demo.py  invsmoothstep3_demo.py  linear_interp1d_demo.py  linearstep_demo.py  logistic_demo.py  semivar_demo.py  smoothstep3_demo.py  smoothstep5_demo.py  sosfilter_demo.py  step_demo.py  swish_demo.py  trapezoid_pulse_demo.py  unwrap_demo.py
npuff/: __init__.py
src/abs_squared/: abs_squared.h  define_cxxgen_extmods.py
src/abssq/: abssq_ufunc.c  abssq_ufunc.cpp
src/all_same/: all_same_gufunc.c.src  all_same_gufunc.h  define_cxx_gufunc_extmod.py
src/backlash/: backlash_gufunc.c.src  backlash_gufunc.h  define_cxx_gufunc_extmod.py
src/bincount/: bincount_gufunc.h  define_cxx_gufunc_extmod.py
src/cabssq/: cabssq_ufunc.c  cabssq_ufunc.cpp
src/convert_to_base/: convert_to_base_gufunc.h  define_cxx_gufunc_extmod.py
src/corr/: corr_gufunc.h  define_cxx_gufunc_extmod.py
src/cross/: cross_gufunc.c.src  cross_gufunc.h  define_cxx_gufunc_extmod.py
src/cross3/: cross3_gufunc.c.src
src/deadzone/: deadzone.h  deadzone_gufunc.c.src  deadzone_ufunc.c.src  define_cxxgen_extmods.py
src/debye1/: check_debye1_generated.c  debye1_generated.c  debye1_generated.h  debye1_ufunc.c  generate_debye1_c.py
src/expint1/: define_cxxgen_extmods.py  expint1.h  expint1_ufunc.c.src
src/fillnan1d/: define_cxx_gufunc_extmod.py  fillnan1d_gufunc.c.src  fillnan1d_gufunc.h
src/findfirst/: findfirst_gufunc.c.src
src/first/: define_cxx_gufunc_extmod.py  first_gufunc.c.src  first_gufunc.h
src/gendot/: gendotmodule.c
src/hyperbolic_ramp/: define_cxxgen_extmods.py  hyperbolic_ramp.h
src/hypot3/: define_cxxgen_extmods.py  hypot3.h
src/hysteresis_relay/: define_cxx_gufunc_extmod.py  hysteresis_relay_gufunc.c.src  hysteresis_relay_gufunc.h
src/issnan/: issnan_ufunc.c.src
src/kbnsum/: define_cxx_gufunc_extmod.py  kbnsum_gufunc.h
src/linear_interp1d/: linear_interp1d_gufunc.c.src
src/log1p/: log1p_ufunc.c
src/log_expit/: define_cxxgen_extmods.py  log_expit.h  log_expit_ufunc.c.src
src/logfactorial/: logfactorial.c  logfactorial.h  logfactorial_ufunc.c
src/loggamma1p/: check_loggamma1p.c  loggamma1p.c  loggamma1p.h  loggamma1p_ufunc.c
src/logistic/: define_cxxgen_extmods.py  logistic.h
src/mad/: define_cxx_gufunc_extmod.py  mad_gufunc.c.src  mad_gufunc.h
src/means/: means_gufunc.c.src
src/meanvar/: define_cxx_gufunc_extmod.py  meanvar_gufunc.c.src  meanvar_gufunc.h
src/minmax/: define_cxx_gufunc_extmod.py  minmax_gufunc.c.src  minmax_gufunc.h
src/multivariate_logbeta/: define_cxx_gufunc_extmod.py  multivariate_logbeta_gufunc.h
src/nan_to_num/: define_cxxgen_extmods.py  nan_to_num.h
src/next/: define_cxxgen_extmods.py  next.h
src/nextn/: define_cxx_gufunc_extmod.py  nextn_gufunc.h
src/normal/: define_cxxgen_extmods.py  erfcx.h  erfcx_funcs.cxx  erfcx_funcs.h  generate_erfcx_code.py  normal.h
src/one_hot/: define_cxx_gufunc_extmod.py  one_hot_gufunc.h
src/ordered/: define_cxx_gufunc_extmod.py  ordered_gufunc.h
src/peaktopeak/: peaktopeak_gufunc.c.src
src/percentileofscore/: define_cxx_gufunc_extmod.py  percentileofscore_gufunc.h
src/pow1pm1/: define_cxxgen_extmods.py  pow1pm1.h
src/ramp/: define_cxxgen_extmods.py  ramp.h
src/searchsorted/: searchsorted_gufunc.c.src
src/semivar/: define_cxxgen_extmods.py  semivar.h
src/softmax/: define_cxx_gufunc_extmod.py  softmax_gufunc.c.src  softmax_gufunc.h
src/sosfilter/: define_cxx_gufunc_extmod.py  sosfilter_gufunc.h
src/step/: define_cxxgen_extmods.py  step.h  step_funcs.h
src/trapezoid_pulse/: define_cxxgen_extmods.py  trapezoid_pulse.h  trapezoid_pulse_ufunc.c.src
src/tri_area/: define_cxx_gufunc_extmod.py  tri_area_gufunc.h
src/ufunc-inspector/: ufunc_inspector.c
src/ufunkify/: _generate_files.py  _ufunkify.c  remove_generated_files.sh
src/unwrap/: define_cxx_gufunc_extmod.py  unwrap_gufunc.c.src  unwrap_gufunc.h
src/util/: README.txt  strided.hpp  ufunc_tools.h
src/vnorm/: define_cxx_gufunc_extmod.py  vnorm_gufunc.c.src  vnorm_gufunc.h
src/wjaccard/: define_cxx_gufunc_extmod.py  wjaccard_gufunc.h
src/yeo_johnson/: define_cxxgen_extmods.py  yeo_johnson.h  yeo_johnson_ufunc.c.src
tools/: conv_template.py  test_wrappers.py  uwrap.py
tools/cxxgen/: generate_concrete_cfuncs.py  generate_gufunc.py  generate_ufunc_extmod.py  generate_ufuncs.py  generate_utils.py  gufuncgen.py  ufunc_config_types.py
tools/uwrap/: uwrap.py
ufunclab/: __init__.py  _gendot_wrap.py  _ufunkify_def.py  _wrapped.py  meson.build
ufunclab/tests/: test_abs_squared.py  test_abssq.py  test_allsame.py  test_backlash.py  test_bincount.py  test_cabssq.py  test_convert_to_base.py  test_corr.py  test_cross.py  test_debye1.py  test_expint1.py  test_fillnan1d.py  test_findfirst.py  test_first.py  test_gendot.py  test_hypot3.py  test_hysteresis_relay.py  test_import.py  test_issnan.py  test_kbnsum.py  test_linear_interp1d.py  test_log1p.py  test_log_expit.py  test_logfactorial.py  test_loggamma1p.py  test_logistic.py  test_mad.py  test_means.py  test_meanvar.py  test_minmax.py  test_multivariate_logbeta.py  test_nan_to_num.py  test_next.py  test_nextn.py  test_normal.py  test_one_hot.py  test_ordered.py  test_peaktopeak.py  test_pow1pm1.py  test_ramp.py  (+13 more)
