[build-system]
build-backend = 'mesonpy'
requires = [
    'meson-python>=0.14.0',
    'toml',
    'numpy>=2.1.0',
]

[project]
name = 'ufunclab'
version = '0.0.9.dev1'
description = 'NumPy ufuncs and utilities.'
readme = 'README.md'
requires-python = '>=3.10'
license = {file = 'LICENSE.txt'}
authors = [
  {name = 'Warren Weckesser', email = 'warren.weckesser+ufunclab@gmail.com'},
]
dependencies = [
    'numpy>=2.1.0'
]

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: C',
    'Programming Language :: C++',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

[tool.meson-python.args]
setup = ['-Doptimization=3']
